# Kino

./: .gitignore  Makefile  pyproject.toml
config/: settings.py  urls.py
src/banners/: models.py
src/banners/migrations/: 0001_initial.py
src/cinema/: models.py
src/cinema/migrations/: 0001_initial.py  0002_cinema_banner_image_cinema_logo_film_main_image.py  0003_alter_film_main_image.py  0004_alter_film_main_image.py  0005_remove_film_gallery_remove_film_release_and_more.py  0006_film_trailer_url.py  0007_film_gallery.py  0008_film_type_2d_film_type_3d_film_type_imax.py
src/core/: forms.py  urls.py  views.py
src/core/templates/admin/: create_film.html
src/core/templates/layout/: basic.html
src/gallery_seo/: apps.py  models.py
src/gallery_seo/migrations/: 0001_initial.py  0002_image_image_alter_image_gallery.py
src/pages/: models.py  views.py
src/pages/migrations/: 0001_initial.py
src/pages/templates/: basic.html
src/static/css/: all.css  style.css
src/users/migrations/: 0001_initial.py
static/css/: adminlte.css  adminlte.min.css  all.css  gallery.css  style.css  upload.css
static/js/: bootstrap.bundle.js  bootstrap.bundle.min.js  bootstrap.js  bootstrap.min.js  gallery.js  upload.js
