[tool.poetry]
name = "kino"
version = "0.1.0"
description = ""
authors = ["yakov <yakov.miroshnichenko@student.sumdu.edu.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "=4.2"
psycopg2 = "^2.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
